--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "^5.2.5",
     "@angular/platform-browser-dynamic": "^5.2.5",
     "@angular/router": "^5.2.5",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "npm": "^5.6.0",
     "rxjs": "^5.5.6",
