--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^5.2.5",
     "@angular/router": "^5.2.5",
     "@ngx-translate/core": "^9.0.0",
+    "@ngx-translate/http-loader": "^3.0.1",
     "core-js": "^2.4.1",
     "npm": "^5.6.0",
     "rxjs": "^5.5.6",
