--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^0.4.0",
+    "@angular-devkit/core": "^0.5.6",
     "@angular/animations": "^5.2.5",
     "@angular/cdk": "^5.2.1",
     "@angular/common": "^5.2.5",
@@ -25,9 +25,10 @@
     "@angular/platform-browser": "^5.2.5",
     "@angular/platform-browser-dynamic": "^5.2.5",
     "@angular/router": "^5.2.5",
-    "@ngx-translate/core": "^9.0.0",
+    "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^3.0.1",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.5",
+    "ngx-cookie-service": "^1.0.10",
     "npm": "^5.6.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.14"
