--- a/angular-client/src/tsconfig.app.json
+++ b/angular-client/src/tsconfig.app.json
@@ -6,6 +6,9 @@
     "module": "es2015",
     "types": ["node"]
   },
+  "angularCompilerOptions": { 
+    "preserveWhitespaces": false 
+  },
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
