--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -25,12 +25,12 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "ajv": "^6.5.0",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "ng2-charts": "^1.6.0",
     "npm": "^5.6.0",
     "rxjs": "^6.2.0",
-    "rxjs-compat": "^6.0.0-rc.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
