--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng build --w --sm=true",
+    "start": "ng build --watch --source-map=true",
     "build": "ng build --prod",
-    "test": "ng test --sm=false",
+    "test": "ng test --source-map=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -31,6 +31,7 @@
     "ng2-charts": "^1.6.0",
     "npm": "^5.6.0",
     "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.2.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
