--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - npm install -g npm
   - npm install -g @angular/cli
+install: npm install
 node_js:
   - '8'
 cache:
