--- a/express-server/package.json
+++ b/express-server/package.json
@@ -3,7 +3,9 @@
 		"version": "0.0.0",
 		"private": true,
 		"scripts": {
-				"start": "node server.js",
+        "start": "node server.js",
+        "start:watch": "nodemon server.js",
+				"start:db": "mkdir -p data/db && mongod --dbpath ./data/db",
 				"test": "mocha test --exit",
 				"cover": "istanbul cover _mocha"
 		},
@@ -32,9 +34,10 @@
 		},
 		"devDependencies": {
 				"chai": "^4.1.2",
-				"istanbul": "^0.4.5",
 				"chai-http": "^3.0.0",
 				"codecov": "^3.0.0",
-				"mocha": "^5.0.1"
+				"istanbul": "^0.4.5",
+				"mocha": "^5.0.1",
+				"nodemon": "1.18.3"
 		}
 }
