--- a/express-server/package.json
+++ b/express-server/package.json
@@ -38,6 +38,7 @@
     "codecov": "^3.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.0.1",
-    "nodemon": "1.18.3"
+    "nodemon": "1.18.3",
+    "yargs": "12.0.1"
   }
 }
