--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
         "ts-node": "~3.2.0",
         "tslint": "~5.7.0",
         "typescript": "~2.7.2",
-        "@angular-devkit/build-angular": "~0.6.5"
+        "@angular-devkit/build-angular": "~0.6.5",
+        "yargs": "12.0.1"
     },
     "scripts": {
         "postinstall": "cd angular-client && npm install && ng build && cd ../express-server && npm install",
