--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
     "ajv": "^6.5.0",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
