LOLLLL TravisCI tests were being skipped. #174

--- a/package.json
+++ b/package.json
@@ -66,6 +66,6 @@
     },
     "scripts": {
         "postinstall": "cd angular-client && npm install && ng build && cd ../express-server && npm install",
-        "test": "echo Skipping Tests"
+        "test": "make test"
     }
 }
